[project]
name = "whiteflows-elite-api"
version = "0.1.0"
description = "WhiteFlows Elite API for Cloudflare Workers"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.1",
    "python-multipart==0.0.22",
    "starlette==0.37.2",
    "httpx==0.27.0",
    "PyJWT==2.8.0",
    "pydantic<2.0.0",
]
